--- a/week_2_css_basics/index.html
+++ b/week_2_css_basics/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>R&egrave;sum&egrave;</title>
+	<title>About Me</title>
 	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -9,9 +9,8 @@
 <div class="container">
 	<h1>Wendy G. Bite</h1>
 <nav>
-	<ul>
-		<li class="right-border"
-		>About Me</li>
+	<ul class="inline">
+		<li class="right-border">About Me</li>
 		<li>
 			<a href="resume.html">R&egrave;sum&egrave;
 			</a>
@@ -22,17 +21,17 @@
 <div class="divider"></div>
 <h2>About Me</h2>
 <div></div>
-<p>
+<p class="prose">
 	<img src="Betty-White.jpg">
 	The series revolves around four older, single women (three widows and one divorc&egrave;e) sharing a house in Miami, Florida. The owner of the house is a widow named Blanche Devereaux (Rue McClanahan), who was joined by fellow widow Rose Nylund (Betty White) and divorc&egrave;e Dorothy Zbornak (Bea Arthur). They both responded to a room-for-rent ad on the bulletin board of a local grocery store. In the pilot episode, the women had a gay cook named Coco (Charles Levin), who was subsequently removed.[5] The three were soon joined by Dorothy's mother, Sophia Petrillo (Estelle Getty), after the retirement home where she lived, Shady Pines, burned down.[6][7]
 </p>
 <div></div>
-<p>Thank You for being a friend. Travel down a road and back again. Your heart is true, you're a pal and a confidante.And if you threw a party, invited everyone you knew, you would see the biggest gift would be from me and the card attached would say, Thank You For Being a Friend!</p>
+<p class="prose">Thank You for being a friend. Travel down a road and back again. Your heart is true, you're a pal and a confidante.And if you threw a party, invited everyone you knew, you would see the biggest gift would be from me and the card attached would say, Thank You For Being a Friend!</p>
 
 <div class="divider"></div>
 
 <nav>
-	<ul>
+	<ul class="inline">
 		
 		<li class="right-border">
 			<a href="www.Facebook.com">Facebook</a>
@@ -43,7 +42,7 @@
 	<li class="right-border">
 			<a href="www.instagram.com">Instagram</a>
 	</li>
-		<li>
+		<li class="inline">
 			<a href="www.LinkedIn.com">LinkedIn
 			</a>
 		</li>
