--- a/week_3_more_layout/index.html
+++ b/week_3_more_layout/index.html
@@ -35,7 +35,9 @@
     <div class="picture">
     <img src="http://i.imgur.com/Bioll4t.jpg">
   </div>
+
 <p class="75">
+  <span id="bigletter">S</span>
 Schlitz Godard cornhole art party, PBR hashtag ethical selvage keffiyeh XOXO Kickstarter. Selfies readymade food truck beard hoodie, mlkshk Pinterest bespoke. Aesthetic tote bag bicycle rights umami, distillery Vice post-ironic four dollar toast you probably haven't heard of them vinyl. Farm-to-table pork belly fixie, 8-bit Godard put a bird on it pour-over jean shorts twee vegan tattooed. Vinyl Austin Brooklyn beard. Pickled tousled blog, cred McSweeney's Helvetica chillwave cardigan chia fingerstache gentrify mumblecore Kickstarter. Authentic leggings pork belly, scenester cliche street art quinoa cronut messenger bag tousled organic tattooed jean shorts cardigan.
   </p>
     <p class="lowerlink">
